--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,30 @@
-Flask>=3.0,<4
-Flask-SQLAlchemy>=3.1
-SQLAlchemy>=2.0
-Werkzeug>=3.0
-gunicorn>=21.2
-psycopg[binary]>=3.1
+alembic==1.14.0
+blinker==1.9.0
+cachelib==0.13.0
+click==8.1.8
+colorama==0.4.6
+distlib==0.3.9
+filelock==3.16.1
+Flask==3.1.0
+Flask-Login==0.6.3
+Flask-Migrate==4.1.0
+Flask-Session==0.8.0
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+greenlet==3.1.1
+gunicorn==23.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.5
+Mako==1.3.8
+MarkupSafe==3.0.2
+msgspec==0.19.0
+packaging==25.0
+platformdirs==4.3.6
+psycopg==3.2.11
+psycopg-binary==3.2.11
+SQLAlchemy==2.0.37
+typing_extensions==4.12.2
+tzdata==2025.2
+virtualenv==20.28.1
+Werkzeug==3.1.3
+WTForms==3.2.1
