--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.17.1
 blinker==1.9.0
 certifi==2025.10.5
 click==8.3.0
@@ -9,6 +10,7 @@ greenlet==3.2.4
 gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
+Mako==1.3.10
 MarkupSafe==3.0.3
 packaging==25.0
 psycopg==3.2.12
