--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,36 @@
-alembic==1.17.1
-blinker==1.9.0
-certifi==2025.10.5
-click==8.3.0
-cloudinary==1.44.1
-colorama==0.4.6
+# --- Flask Core ---
 Flask==3.1.2
-Flask-SQLAlchemy==3.1.1
-greenlet==3.2.4
-gunicorn==23.0.0
-itsdangerous==2.2.0
+Werkzeug==3.1.3
 Jinja2==3.1.6
-Mako==1.3.10
-MarkupSafe==3.0.3
-packaging==25.0
+itsdangerous==2.2.0
+click==8.3.0
+blinker==1.9.0
+
+# --- Database & ORM ---
+SQLAlchemy==2.0.44
+Flask-SQLAlchemy==3.1.1
 psycopg==3.2.12
 psycopg-binary==3.2.12
+
+# --- Migrations ---
+alembic==1.14.0
+
+# --- Cloudinary Integration ---
+cloudinary==1.44.1
+
+# --- Environment Variables ---
 python-dotenv==1.2.1
-six==1.17.0
-SQLAlchemy==2.0.44
+
+# --- Production Server (for Render) ---
+gunicorn==23.0.0
+
+# --- Utilities & Security ---
 typing_extensions==4.15.0
+greenlet==3.2.4
+packaging==25.0
 tzdata==2025.2
+colorama==0.4.6
+six==1.17.0
 urllib3==2.5.0
-Werkzeug==3.1.3
+certifi==2025.10.5
+MarkupSafe==3.0.3
