fix: add psycopg2-binary for render postgres connection

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,7 @@ blinker==1.9.0
 # --- Database & ORM ---
 SQLAlchemy==2.0.44
 Flask-SQLAlchemy==3.1.1
-psycopg==3.2.12
-psycopg-binary==3.2.12
+psycopg2-binary==2.9.9
 
 # --- Migrations ---
 alembic==1.14.0
