--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ blinker==1.9.0
 # --- Database & ORM ---
 SQLAlchemy==2.0.44
 Flask-SQLAlchemy==3.1.1
-psycopg2-binary==2.9.9
+psycopg[binary,pool]==3.2.3
 
 # --- Migrations ---
 alembic==1.14.0
